tests/syntax-errors/attributes-not-closed.pug
span.testclass(class="testclass2"
